--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
+    "js-base64": "^3.7.5",
     "jsonlines": "^0.1.1",
     "nodemon": "^2.0.20",
+    "winston": "^3.8.2",
     "xlsx": "^0.18.5"
   }
 }
